Make sure long text in TextRegions wrap
[Fixes: #96330536]

--- a/src/components/posts/PostBody.sass
+++ b/src/components/posts/PostBody.sass
@@ -28,6 +28,7 @@
 
 .TextRegion
   max-width: rem(780)
+  word-wrap: break-word
 
 // Todo: We should be able to rip this out when we convert your fake `span`
 // elements over to links
